# kedro

./: .coveragerc  .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .isort.cfg  .lycheeignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .secrets.baseline  .vale.ini  404.html  CATALOG_DIATAXIS_REORGANIZATION_PLAN.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIATAXIS_REORGANIZATION_PLAN.md  FINDINGS.md  KEP-10-dataset-validation.md  KEP-7-dataset-validation-v2.md  LICENSE.md  MANIFEST.in  MULTIRUN_DESIGN_CONSIDERATIONS.md  Makefile  PR_DESCRIPTION.md  README.md  RELEASE.md  REVIEWER_NOTE.md  SECURITY.md  SECURITY_MODEL.md  appveyor.yml  asv.conf.json  behave.ini  contributing-to-Kedro.md  dataset-validation-learning-path.md  dataset-validation-tracking.md  default_coverage_report.toml  (+24 more)
.circleci/: config.yml  continue_config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  stale.yml
.venv311/: pyvenv.cfg
benchmarks/: README.md  benchmark_datacatalog.py  benchmark_dummy.py  benchmark_kedrodatacatalog.py  benchmark_ocl.py  benchmark_runner.py  pyproject.toml
benchmarks/OmegaConfigLoader/: benchmark_ocl.py
benchmarkss/: benchmark_runner.py
cicd/: Dockerfile
dependency/: requirements.txt
docker/: Dockerfile  build-docker-image-for-kedro-dev-env.sh  build-docker-image.sh
docs/: README.md  agentic_reflection_poc.md  bd.sh  build-docs.sh  conf.py  hooks.py  index.md  kedro-datasets-docs.sh  on_demand_dependency_loading.md  package-lock.json  package.json  pipeline_loading_architecture.md  readme.md  robots.txt  scenario_1_selective_loading.md  scenario_2_dep_free_commands.md
examples/: __init__.py  catalog.yml  demo_catalog_validation.py  nodes.py  schemas.py
extras/: README.md  ipython_loader.py  kedro_project_loader.py
features/: activate_nbstripout.feature  addons.feature  build-reqs.feature  build_docs.feature  build_reqs.feature  environment.py  info.feature  inspection.feature  install.feature  io_core.feature  io_parquet_local.feature  io_sql.feature  ipython.feature  jupyter.feature  load_context.feature  load_node.feature  micropkg.feature  (+11 more)
features/steps/test_starter/{{ cookiecutter.repo_name }}/: .isort.cfg  .telemetry  README.md  ipython_script.py  kedro_cli.py  pyproject.toml  requirements.txt  setup.cfg
features/steps/test_starter/{{ cookiecutter.repo_name }}/.ipython/profile_default/startup/: 00-kedro-init.py
features/steps/test_starter/{{ cookiecutter.repo_name }}/conf/: README.md  logging.yml
features/steps/test_starter/{{ cookiecutter.repo_name }}/conf/base/: catalog.yml  logging.yml  parameters.yml
features/steps/test_starter/{{ cookiecutter.repo_name }}/conf/local/: credentials.yml
features/steps/test_starter/{{ cookiecutter.repo_name }}/docs/source/: conf.py  index.rst
features/steps/test_starter/{{ cookiecutter.repo_name }}/src/: pyproject.toml  requirements.txt  setup.py
features/steps/test_starter/{{ cookiecutter.repo_name }}/src/tests/: test_run.py
features/steps/test_starter/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: __init__.py  __main__.py  cli.py  hooks.py  pipeline_registry.py  run.py  settings.py
features/steps/test_starter/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/data_engineering/: __init__.py  nodes.py  pipeline.py
features/steps/test_starter/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
features/steps/test_starter/{{ cookiecutter.repo_name }}/tests/: test_run.py
kedro/templates/project/{{ cookiecutter.repo_name }}/: .coveragerc  .gitignore  .kedro.yml  AGENTS.md  README.md  kedro_cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
kedro/templates/project/{{ cookiecutter.repo_name }}/.agents/skills/catalog-config/: SKILL.md
kedro/templates/project/{{ cookiecutter.repo_name }}/.cursor/rules/: catalog-config.mdc
kedro/templates/project/{{ cookiecutter.repo_name }}/.ipython/profile_default/: ipython_config.py
kedro/templates/project/{{ cookiecutter.repo_name }}/.ipython/profile_default/startup/: 00-kedro-init.py
kedro/templates/project/{{ cookiecutter.repo_name }}/conf/: README.md  logging.yml
kedro/templates/project/{{ cookiecutter.repo_name }}/conf/base/: catalog.yml  credentials.yml  logging.yml  parameters.yml
kedro/templates/project/{{ cookiecutter.repo_name }}/conf/local/: credentials.yml
kedro/templates/project/{{ cookiecutter.repo_name }}/docs/: Makefile  make.bat
kedro/templates/project/{{ cookiecutter.repo_name }}/docs/source/: conf.py  index.rst
kedro/templates/project/{{ cookiecutter.repo_name }}/src/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
kedro/templates/project/{{ cookiecutter.repo_name }}/src/tests/: test_run.py
kedro/templates/project/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: __init__.py  __main__.py  cli.py  hooks.py  pipeline.py  pipeline_registry.py  run.py  settings.py
kedro/templates/project/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/data_engineering/: __init__.py  nodes.py  pipeline.py
kedro/templates/project/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/data_science/: nodes.py  pipeline.py
kedro/templates/project/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/example/: __init__.py  nodes.py  pipeline.py
kedro/templates/project/{{ cookiecutter.repo_name }}/tests/: test_run.py
performance-test/: .gitignore  README.md  pyproject.toml  requirements.txt
performance-test/conf/: README.md
performance-test/conf/base/: catalog.yml  parameters.yml  parameters_expense_analysis.yml  spark.yml
performance-test/data/: gastos-deputados.csv
performance-test/src/performance_test/: __init__.py  __main__.py  hooks.py  settings.py
performance-test/src/performance_test/pipelines/expense_analysis/: __init__.py  nodes.py  pipeline.py
performance-test/tests/pipelines/expense_analysis/: test_pipeline.py
(+2027 files in other folders)
