[metadata]
description-file=README.md

[tool:pytest]
addopts=--cov-report xml:coverage.xml
        --cov-report term-missing
        --cov kedro
        --cov extras
        --cov tests
        --ignore tests/template/fake_repo
        --no-cov-on-fail
        -ra

[importlinter]
root_package = kedro

[importlinter:contract:1]
name = Contrib > CLI > Context > Library, Runner > IO & Pipeline
type = layers
containers = kedro
layers =
    contrib
    cli
    context
    runner
    io
    pipeline
    config
    versioning

[importlinter:contract:2]
name = Pipeline and IO are independent
type = independence
modules =
    kedro.pipeline
    kedro.io

[importlinter:contract:3]
name = Config cannot import Runner et al
type = forbidden
source_modules =
    kedro.config
forbidden_modules =
    kedro.runner
    kedro.io
    kedro.pipeline

[importlinter:contract:4]
name = Runner et al cannot import Config
type = forbidden
source_modules =
    kedro.runner
    kedro.io
    kedro.pipeline
forbidden_modules =
    kedro.config
