[metadata]
description-file=README.md

[tool:pytest]
; addopts=--cov-report xml:coverage.xml
;         --cov-report term-missing
;         --cov kedro
;         --cov tests
;         --ignore tests/template/fake_repo
;         --no-cov-on-fail
;         -ra
;         -W ignore

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[importlinter]
root_package = kedro

[importlinter:contract:1]
name = CLI > Context > Library, Runner > Extras > IO & Pipeline
type = layers
containers = kedro
layers =
    framework.cli
    framework.session
    framework.context
    framework.project
    runner
    extras.datasets
    io
    pipeline
    config
    versioning
ignore_imports =
    kedro.runner.parallel_runner -> kedro.framework.project
    kedro.runner.parallel_runner -> kedro.framework.session.session

[importlinter:contract:2]
name = Pipeline and IO are independent
type = independence
modules =
    kedro.pipeline
    kedro.io

[importlinter:contract:3]
name = Config cannot import Runner et al
type = forbidden
source_modules =
    kedro.config
forbidden_modules =
    kedro.runner
    kedro.io
    kedro.pipeline
    kedro.extras.datasets

[importlinter:contract:4]
name = Runner et al cannot import Config
type = forbidden
source_modules =
    kedro.runner
    kedro.io
    kedro.pipeline
    kedro.extras.datasets
forbidden_modules =
    kedro.config
ignore_imports=
    kedro.framework.context.context -> kedro.config
    kedro.framework.hooks.specs -> kedro.config
