[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.python_package }}"
version = "0.1"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.scripts]
{{ cookiecutter.repo_name }} = "{{ cookiecutter.python_package }}.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
